@@ -2,7 +2,7 @@
 connect_method = local
 
 [hosts]
-localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2
+localhost = component1, component2, component3, component4, missingcomponent, cycle1, cycle2, dnsproblem
 
 [component:component1]
 do_what_is_needed = false
@@ -15,3 +15,6 @@ asdf = 1
 
 [component:nonexisting-component-section]
 asdf = 2
+
+[component:dnsproblem]
+attribute_with_problem = localhost
